--- a/FynzoSurvey/Info.plist
+++ b/FynzoSurvey/Info.plist
@@ -2,18 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>FacebookAppID</key>
-    <string>2127298080864335</string>
-    <key>FacebookDisplayName</key>
-    <string>Fynzo Survey</string>
+    
     <key>CFBundleURLTypes</key>
     <array>
         <dict>
             <key>CFBundleURLSchemes</key>
             <array>
-                <string>fb2127298080864335</string>
+                <string>fb2576551475723794</string>
             </array>
         </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>2576551475723794</string>
+    <key>FacebookDisplayName</key>
+    <string>Fynzo Survey</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
